Fixed Missing Colour Variable

--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,7 @@ p
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 2rem 0;
+    color: var(--dark);
 }
 
 .card
